# nyx-eama

./: .gitignore  3td_data.py  3td_data_loader.py  3td_download_data.py  README.md  convert_c3d_to_csv.py  data_loader.py  download_thetis.py  evaluate_feedback.py  extract_biomechanical_features.py  pyproject.toml  thetis_data.py  thetis_download.py  urls.txt
dataset-readme/: README.md
experiments/: evaluate_feedback.py  racket_summary.py
experiments/output/: llm_grounding_test.json
experiments/output/biomech_validation/: stats_results.json
notebooks/: exploration.ipynb
src/: pipeline.py  thetis_data.py  thetis_download.py
src/feedback/: evaluate_feedback.py  feedback_tests.py  llm_feedback.py
src/models/: action_recognition.py  biomechanical_features.py  feature_extraction.py  train.py
src/utils/: helpers.py
tests/: feature_extraction_visualization.py  test_action_recognition.py  test_feature_extraction.py  test_feature_extraction_integration.py  test_feature_extraction_unit.py  test_llm_feedback.py  test_thetis_data.py
