[project]
name = "nyx-eama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=15.0.0",
    "ezc3d>=1.5.19",
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "scikit-learn>=1.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
    "vit-pytorch>=1.10.1",
]
